--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>himechat.png">
     <title>himechat</title>
+    <meta property="og:title" content="himechat" />
+    <meta property="og:type" content="webapp" />
+    <meta property="og:url" content="https://himechat-gyoza.web.app" />
+    <meta property="og:image" content="<%= BASE_URL %>himechat.png" />
+    <meta property="og:site_name" content="himechat" />
+    <meta property="og:description" content="ぴえんぴえんした構文が作成されます" />
+    <meta name="twitter:card" content="<%= BASE_URL %>himechat.png" />
   </head>
   <body>
     <noscript>
