--- a/front/public/index.html
+++ b/front/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="himechat" />
     <meta property="og:type" content="webapp" />
     <meta property="og:url" content="https://himechat-gyoza.web.app" />
-    <meta property="og:image" content="<%= BASE_URL %>himechat.png" />
+    <meta property="og:image" content="<%= BASE_URL %>ogp.png" />
     <meta property="og:site_name" content="himechat" />
     <meta property="og:description" content="ぴえんぴえんした構文が作成されます" />
   </head>
