--- a/front/public/index.html
+++ b/front/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>himechat.png">
+    <link rel="icon" href="https://himechat-gyoza.web.app/favicon.ico">
     <title>himechat</title>
     <meta name="twitter:card" content="summary" />
     <meta property="og:title" content="himechat" />
     <meta property="og:type" content="webapp" />
     <meta property="og:url" content="https://himechat-gyoza.web.app" />
-    <meta property="og:image" content="<%= BASE_URL %>ogp.png" />
+    <meta property="og:image" content="https://himechat-gyoza.web.app/ogp.png" />
     <meta property="og:site_name" content="himechat" />
     <meta property="og:description" content="ぴえんぴえんした構文が作成されます" />
   </head>
