--- a/front/public/index.html
+++ b/front/public/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="https://himechat-gyoza.web.app/favicon.ico">
-    <title>himechat</title>
-    <meta name="twitter:card" content="summary" />
-    <meta property="og:title" content="himechat" />
-    <meta property="og:type" content="webapp" />
-    <meta property="og:url" content="https://himechat-gyoza.web.app" />
-    <meta property="og:image" content="https://himechat-gyoza.web.app/ogp.png" />
-    <meta property="og:site_name" content="himechat" />
-    <meta property="og:description" content="ぴえんぴえんした構文が作成されます" />
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but himechat doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="https://himechat-gyoza.web.app/favicon.ico">
+  <title>himechat</title>
+  <meta name="twitter:card" content="summary" />
+  <meta property="og:title" content="himechat" />
+  <meta property="og:type" content="webapp" />
+  <meta property="og:url" content="https://himechat-gyoza.web.app" />
+  <meta property="og:image" content="https://himechat-gyoza.web.app/ogp.png" />
+  <meta property="og:site_name" content="himechat" />
+  <meta property="og:description" content="ぴえんぴえんした構文が作成されます" />
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but himechat doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/7.5.2/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="/__/firebase/7.5.2/firebase-analytics.js"></script>
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
+</body>
+
 </html>
