--- a/front/public/index.html
+++ b/front/public/index.html
@@ -24,14 +24,29 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="/__/firebase/7.5.2/firebase-app.js"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-app.js"></script>
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="/__/firebase/7.5.2/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-analytics.js"></script>
 
-  <!-- Initialize Firebase -->
-  <script src="/__/firebase/init.js"></script>
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyDCBvVIgu24KWTpTZ3xCMSCVKusVYvqVVE",
+      authDomain: "himechat-gyoza.firebaseapp.com",
+      databaseURL: "https://himechat-gyoza.firebaseio.com",
+      projectId: "himechat-gyoza",
+      storageBucket: "himechat-gyoza.appspot.com",
+      messagingSenderId: "333374058484",
+      appId: "1:333374058484:web:4d8aa2abc4720fe13353a1",
+      measurementId: "G-1P7H6DKT8B"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
 </body>
 
 </html>
